# pawpaw

./: .gitignore  README.md  how_it_works.ipynb  pyproject.toml  train_classifiers_simple.py  tutorial.ipynb
benchmarks/: README.md  common.py  speed.py  sst2_accuracy.py
pawpaw/: __init__.py  api.py  cache.py  cli.py  config.py  format.py  pipeline.py  runtime.py  runtime_cache.py  version.py
pawpaw/pack/: __init__.py  bundle.py  gguf_convert.py  paw_file.py
pawpaw/synth/: __init__.py  dedup.py  examples.py  llm.py  prompts.py  taxonomy.py
pawpaw/train/: __init__.py  dataset.py  device.py  prompt_template.py  trainer.py
tests/: conftest.py  diagnose_tests.py  generate_report.py  run_all_testbeds.py  test_cache.py  test_cli.py  test_config.py  test_diagnostics.ipynb  test_pipeline.py  test_runtime.py  test_runtime_cache.py  testbed_edge_cases.py  testbed_intent.py  testbed_report.ipynb  testbed_sentiment.py  testbed_topic.py
tests/integration/: test_end_to_end.py
tests/pack/: test_bundle.py  test_gguf_convert_import.py  test_paw_file.py  test_paw_file_golden.py
tests/synth/: test_dedup.py  test_examples.py  test_llm.py  test_prompts.py  test_taxonomy.py
tests/train/: test_dataset.py  test_device.py  test_prompt_template.py  test_trainer_import.py
