[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pawpaw"
dynamic = ["version"]
description = "Build a sentence of English into a .paw file that runs locally and returns a one-word answer in milliseconds."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "pawpaw contributors" }]
keywords = ["llm", "lora", "classification", "agents", "llama-cpp", "peft"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
"llama-cpp-python>=0.2.90",
"transformers>=4.46",
"peft>=0.13",
"safetensors>=0.4",
"torch>=2.4",
"huggingface_hub>=0.24",
"datasketch>=1.6",
"gguf>=0.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "nbformat>=5.0",
  "jupyter>=1.0",
]
benchmarks = [
  "datasets>=2.20",
]

[project.scripts]
pawpaw = "pawpaw.cli:main"

[project.urls]
Homepage = "https://github.com/pawpaw-dev/pawpaw"
Documentation = "https://github.com/pawpaw-dev/pawpaw/blob/main/README.md"
Issues = "https://github.com/pawpaw-dev/pawpaw/issues"

[tool.setuptools.packages.find]
include = ["pawpaw*"]

[tool.setuptools.dynamic]
version = {attr = "pawpaw.version.PIPELINE_VERSION"}

[tool.setuptools.package-data]
pawpaw = ["py.typed"]

[tool.setuptools.exclude-package-data]
pawpaw = ["__pycache__", "*.pyc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
