[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pawpaw"
dynamic = ["version"]
description = "Build a sentence of English into a .paw file that runs locally and returns a one-word answer in milliseconds."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "pawpaw contributors" }]
keywords = ["llm", "lora", "classification", "agents", "llama-cpp", "peft"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "llama-cpp-python>=0.3.0",
    "huggingface_hub>=0.24",
    "safetensors>=0.4",
]

[project.optional-dependencies]
build = [
    "transformers>=4.46",
    "peft>=0.13",
    "torch>=2.4",
    "datasketch>=1.6",
    "gguf>=0.10",
]
load = [
    "torch>=2.4",
    "gguf>=0.10",
]
all = [
    "pawpaw[build]",
    "psutil>=5.9",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "nbformat>=5.0",
    "jupyter>=1.0",
]
benchmarks = [
    "datasets>=2.20",
]

[project.scripts]
pawpaw = "pawpaw.cli:main"

[project.urls]
Homepage = "https://github.com/pawpaw-dev/pawpaw"
Documentation = "https://github.com/pawpaw-dev/pawpaw/blob/main/README.md"
Repository = "https://github.com/pawpaw-dev/pawpaw"
Changelog = "https://github.com/pawpaw-dev/pawpaw/releases"
Issues = "https://github.com/pawpaw-dev/pawpaw/issues"

[tool.setuptools.packages.find]
include = ["pawpaw*"]

[tool.setuptools.dynamic]
version = {attr = "pawpaw.version.__version__"}

[tool.setuptools.package-data]
pawpaw = ["py.typed"]

[tool.setuptools.exclude-package-data]
pawpaw = ["__pycache__", "*.pyc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
